--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.2",
     "config": "^1.26.2",
     "express": "^4.15.4",
+    "moment": "^2.18.1",
     "request": "^2.81.0"
   }
 }
