--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "body-parser": "^1.17.2",
     "config": "^1.26.2",
     "express": "^4.15.4",
-    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "request": "^2.81.0"
   }
 }
