--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thegunnapp-bot",
+  "name": "thegunnapp-messenger",
   "private": true,
   "version": "0.7.6",
   "description": "Messenger bot for TheGunnApp",
